--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 gpio = "0.4.1"
 chrono = "0.4"
-i2c_linux = "0.1.2"
+i2c-linux = "0.1.2"
 
 [[bin]]
 name = "pi_play"
